--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,6 @@
 .App {
-  text-align: center;
+  background-color: #fafafa;
+  min-height: 80vh;
+  margin: 5%;
+  box-shadow: 1px 10px 25px 10px rgba(0, 0, 0, 0.3);
 }
